# knot-optimization

./: README.md  TO_DO.txt
cost-analysis/: all_knots.json  analysis.py  grapher.py  grapher.py___jb_old___  knot.py  plotly_api_setup.py  test.py  top_100.json
cost-analysis/trefoil_statistics/: all_knots.json  top_100.json
executables/exhaustive-trefoil/: Cargo.toml
executables/exhaustive-trefoil/src/: main.rs
executables/interactive_report_view/: Cargo.toml
executables/interactive_report_view/src/: main.rs
executables/interactive_symmetry_adjust/: Cargo.toml
executables/interactive_symmetry_adjust/src/: main.rs
executables/symmetry_adjust_analysis/: Cargo.toml
executables/symmetry_adjust_analysis/src/: main.rs
executables/symmetry_adjust_sample/: Cargo.toml
executables/symmetry_adjust_sample/src/: main.rs
knot/: .gitignore  Cargo.toml  trefoil_result.json
knot/src/: approx_locking_angle.rs  collision_grid.rs  collision_grid_trivial.rs  continuous_optimize.rs  cost.rs  defaults.rs  filter.rs  isometry_adjust.rs  joint.rs  lib.rs  optimize_tools.rs  rand_problem.rs  report.rs  symmetry.rs  symmetry_adjust.rs
knot/src/geometries/: bspline_to_curve.rs  chinbut_spline.rs  curve_9_40.rs  custom_spline.rs  from_curve.rs  from_spline.rs  input_curve.rs  mod.rs  spherical.rs  trefoil_curve.rs  trefoil_spline.rs  visualize_curve.rs
knot/src/visualize/: bspline_to_curve.rs  from_curve.rs  joint_render.rs  mod.rs
knot/trefoil_statistics/: all_knots.json  top_100.json
knot_visualize/: Cargo.toml
knot_visualize/src/: joint_render.rs  lib.rs
