[package]
name = "knot"
version = "0.1.0"
authors = ["William Brandon", "Jonathan Liu"]

[dependencies]
nalgebra = "0.18.0"
alga = "0.9.0"
approx = "0.3.2"
rand = "0.6.5"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
kiss3d = "0.19.0"
rayon = "1.0.3"
clap = "2.33.0"
bspline = "0.2.2"
image = "0.21.1"
