[package]
name = "interactive_report_view"
version = "0.1.0"
authors = ["William Brandon <hypercube97@gmail.com>"]

[dependencies]
knot = { path = "../../knot" }
knot_visualize = { path = "../../knot_visualize" }
rand = "0.3.17"
nalgebra = "0.13.1"
alga = "0.5.2"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.4"
kiss3d = "0.11.0"
glfw = "0.15"
